# omniverse-market-api

./: .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  run_demo.py  submission.html
.github/workflows/: ci.yml
api/: __init__.py  main.py
api/routes/: __init__.py  ingest.py  markets.py
data/: gen_sample.py  sample_timeseries.json
examples/: curl_examples.sh  postman_collection.json
ingestion/: __init__.py  kalshi.py  polymarket.py
models/: __init__.py  schemas.py
tests/: __init__.py  test_api.py
